fix client profile update

--- a/templates/dashboards/dashboard_base.html
+++ b/templates/dashboards/dashboard_base.html
@@ -62,13 +62,15 @@
                         </div>
                         <nav class="dashboard-nav nav-light pb-3" id="navbarSupportedContent">
                             <ul class="navbar-nav left-collaps-nav">
+                                {% if user.is_developer %}
                                 <li class="text-white pb-2 pt-4 px-20">{% trans "Projects Administration" %}</li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url "main_app:my-project-list" %}">
                                         <i class="fa fa-building flat-mini pe-2"></i>
-                                        {% trans "My Properties" %}
+                                        {% trans "My Projects" %}
                                     </a>
                                 </li>
+                                {% endif %}
                                 <li class="text-white pb-2 pt-4 px-20">{% trans "Account Settings" %}</li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
@@ -109,7 +111,15 @@
                                                 </ul>
                                                 <ul class="navbar-nav user-option">
                                                     <li class="nav-item">
-                                                        <a class="nav-link" href="{% url 'accounts:developer-profile' %}"><img src="{{ user.get_logo_image_or_avatar }}" alt=""> Hi, {{ user.get_full_name }}</a>
+                                                        {% if user.is_developer %}
+                                                        <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
+                                                            <img src="{{ user.get_logo_image_or_avatar }}" alt=""> Hi, {{ user.get_full_name }}
+                                                        </a>
+                                                        {% else %}
+                                                        <a class="nav-link" href="{% url 'accounts:client-profile' %}">
+                                                            <img src="{{ user.get_logo_image_or_avatar }}" alt=""> Hi, {{ user.get_full_name }}
+                                                        </a>
+                                                        {% endif %}
                                                     </li>
                                                 </ul>
                                             </div>
