--- a/templates/dashboards/profile.html
+++ b/templates/dashboards/profile.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 {% block page_header %}
-    {{ listing_title }}
+    <h3>{{ listing_title }}</h3>
 {% endblock page_header %}
 {% block main_containt %}
     <form method="post" enctype="multipart/form-data">
