--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% if page_obj.paginator.num_pages > 1 %}
 <div class="row">
     <div class="col mt-5">
         <nav aria-label="Page navigation example">
@@ -24,3 +25,4 @@
         </nav>
     </div>
 </div>
+{% endif %}
