dealing with address based on map location point

--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -31,7 +31,7 @@
                                 <img class="rounded" src="{{ project.get_first_image_or_default }}" alt="">
                                 <div class="property-info d-table">
                                     <h5 class="text-secondary font-400">{{ project.name }}</h5>
-{#                                    <span><i class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.location }}</span>#}
+                                    <span><i class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.address }}</span>
                                 </div>
                             </td>
                             <td>{{ project.get_type_display }}</td>
