--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -27,6 +27,7 @@
 <!--============== Property Details Start ==============-->
 
     <!--============== Property Slider Start ==============-->
+    {% if project_images %}
     <div class="full-row p-0">
         <div class="container">
             <div class="row">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     <!--============== Property Slider End ==============-->
 
         <!--============== Property Details Start ==============-->
@@ -131,7 +133,13 @@
                                         </tr>
                                         <tr>
                                             <td>{% trans "Address" %} :</td>
-                                            <td>{{ project.location }}</td>
+                                            <td>
+                                                {% if project.address %}
+                                                {{ project.address }}
+                                                {% else %}
+                                                {{ project.location }}
+                                                {% endif %}
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>{% trans "Developer Name" %} :</td>
