change logo in dashboard

--- a/templates/dashboards/dashboard_base.html
+++ b/templates/dashboards/dashboard_base.html
@@ -55,7 +55,7 @@
                 <div class="col-md-4 col-lg-3 col-xl-2 px-0">
                     <div class="dashboard-nav-area bg-secondary pt-4">
                         <a class="navbar-brand d-table px-40 py-3 mb-3" href="{% url "main_app:index" %}">
-                            <img src="{% static 'images/logo/logo11.png' %}" alt="dashboard logo"></a>
+                            <img src="{% static 'images/logo/dash-logo.png' %}" alt="dashboard logo"></a>
                         <div class="collaps-dashboard m-3 px-3 rounded bg-white text-secondary clearfix d-md-none">
                             <span>{% trans "Open Dashboard Navigation" %}</span>
                             <span class="flaticon-menu text-secondary flat-mini float-end"></span>
