--- a/templates/dashboards/profile.html
+++ b/templates/dashboards/profile.html
@@ -6,7 +6,7 @@
     <h3>{{ listing_title }}</h3>
 {% endblock page_header %}
 {% block main_containt %}
-    <form method="post" enctype="multipart/form-data">
+    <form class="form-boder" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit">{% trans "Update" %}</button>
