Fix Broken Static Files Links in Home Page

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -203,7 +203,7 @@
 <!--============== Make Design Banner Section Start ==============-->
 <div class="full-row p-0" id="register">
     <div class="container">
-        <div class="overlay-secondary rounded py-8 sm-px-0" style="padding-left: 150px; padding-right: 150px; background-image: url(assets/images/background/join.jpg); background-repeat: no-repeat; background-position: center center; background-size: cover; overflow: hidden;">
+        <div class="overlay-secondary rounded py-8 sm-px-0" style="padding-left: 150px; padding-right: 150px; background-image: url({% static 'images/background/join.jpg' %}); background-repeat: no-repeat; background-position: center center; background-size: cover; overflow: hidden;">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center position-relative">
                     <h2 class="text-white text-uppercase mb-4 font-400">WHY SHOULD YOU JOIN US ?</h2>
@@ -233,42 +233,42 @@
             <div class="row row-cols-xl-4 row-cols-lg-4 row-cols-sm-3 row-cols-1 g-4" style="">
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/24.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/24.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/25.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/25.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/26.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/26.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/27.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/27.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/28.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/28.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/29.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/29.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/30.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/30.png' %}" alt="partner logo">
                 </a>
             </div>
             <div class="col">
                 <a href="#" class="hover-img-upshow overflow-hidden d-table d-sm-block my-20">
-                    <img class="w-auto" src="assets/images/partner/31.png" alt="partner logo">
+                    <img class="w-auto" src="{% static 'images/partner/31.png' %}" alt="partner logo">
                 </a>
             </div>
         </div>
@@ -355,7 +355,7 @@
                                 <span class="sale bg-secondary text-white">For Rent</span>
                                 <span class="featured bg-primary text-white">Featured</span>
                             </div>
-                            <a href="#"><img class="w-100" src="assets/images/property/2.png" alt=""></a>
+                            <a href="#"><img class="w-100" src="{% static 'images/property/2.png' %}" alt=""></a>
                             <ul class="position-absolute quick-meta">
                                 <li><a href="#"><i class="flaticon-transfer flat-mini"></i></a></li>
                                 <li><a href="#"><i class="flaticon-like-1 flat-mini"></i></a></li>
@@ -406,7 +406,7 @@
                             </div>
                             <div class="d-flex align-items-center post-meta mt-2 py-3 border-top">
                                 <div class="agent">
-                                    <a href="#" class="d-flex text-general align-items-center"><img class="rounded-circle me-2" src="assets/images/team/1.jpg" alt="avata"><span>Ali Tufan</span></a>
+                                    <a href="#" class="d-flex text-general align-items-center"><img class="rounded-circle me-2" src="{% static 'images/team/1.jpg' %}" alt="avata"><span>Ali Tufan</span></a>
                                 </div>
                                 <div class="post-date ms-auto"><span>2 Month Ago</span></div>
                             </div>
