--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -4,7 +4,7 @@
 {% block page_header %}
 <div class="row">
     <div class="col">
-        <h3 class="my-3">My Projects List</h3>
+        <h3 class="my-3">{{ listing_title }}</h3>
     </div>
 </div>
 {% endblock page_header %}
