--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -17,11 +17,11 @@
                 <table class="w-100 items-list bg-transparent">
                     <thead>
                         <tr class="bg-white">
-                            <th>Name</th>
-                            <th>type</th>
-                            <th>current status</th>
-                            <th>area</th>
-                            <th>Action</th>
+                            <th>{% trans 'Name' %}</th>
+                            <th>{% trans 'Type' %}</th>
+                            <th>{% trans 'Current Status' %}</th>
+                            <th>{% trans 'Area' %}</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
