display address from map as a function

--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -135,13 +135,7 @@
                                         </tr>
                                         <tr>
                                             <td>{% trans "Address" %} :</td>
-                                            <td>
-                                                {% if project.address %}
-                                                    {{ project.address }}
-                                                {% else %}
-                                                    {{ project.location }}
-                                                {% endif %}
-                                            </td>
+                                            <td>{{ project.get_address }}</td>
                                         </tr>
                                         <tr>
                                             <td>{% trans "Developer Name" %} :</td>
